test(s2n-quic-core): add bolero harnesses for varint

--- a/quic/s2n-quic-core/Cargo.toml
+++ b/quic/s2n-quic-core/Cargo.toml
@@ -48,6 +48,7 @@ s2n-codec = { path = "../../common/s2n-codec", features = ["testing"] }
 [target.'cfg(kani)'.dependencies]
 bolero = "0.7"
 bolero-generator = "0.7"
+s2n-codec = { path = "../../common/s2n-codec", features = ["testing"] }
 
 [[test]]
 name = "crypto"
